syntax = "proto3";

package blobcast.storageapis.v1;

option go_package = "github.com/forma-dev/blobcast/pkg/proto/blobcast/storageapis/v1";

import "blobcast/storage/v1/file_manifest.proto";

message FileManifest {
  string id = 1;
  blobcast.storage.v1.FileManifest manifest = 2;
}
